--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -4,6 +4,7 @@ import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock4 } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 import Separator from './ui/separator.astro';
+import Text from './ui/text.astro';
 
 type Props = { post: CollectionEntry<'posts'> };
 
@@ -16,26 +17,24 @@ const { remarkPluginFrontmatter } = await post.render();
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={twJoin(
     'group flex h-full select-none flex-col overflow-hidden rounded border',
-    'focus-visible:outline-none focus-visible:ring-2',
+    'focus-visible:outline-none focus-visible:ring',
   )}
 >
   <div class="h-14 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
-    <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
+    <Image src={post.data.cover} alt="Post Cover" loading="eager" class="rounded-t" />
   </div>
-  <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
-    <span class="text-xs group-hover:text-emphasis motion-safe:transition-colors">
-      {post.data.title}
-    </span>
-    <p class="flex-1 text-xxs text-2">{post.data.description}</p>
+  <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-surface-1 p-4">
+    <Text class="group-hover:text-emphasis motion-safe:transition-colors">{post.data.title}</Text>
+    <Text as="p" class="flex-1 text-sm text-foreground-2">{post.data.description}</Text>
     <Separator class="my-1.5" />
-    <div class="flex justify-between gap-4 text-xxs text-2">
+    <div class="flex justify-between gap-4 text-sm text-foreground-2">
       <div class="flex items-center gap-2">
         <Calendar class="shrink-0" size={14} aria-hidden />
         <time datetime={post.data.published.iso}>{post.data.published.pretty}</time>
       </div>
       <div class="flex items-center gap-2">
         <Clock4 class="shrink-0" size={14} aria-hidden />
-        <span>{remarkPluginFrontmatter.readingTime}</span>
+        <Text>{remarkPluginFrontmatter.readingTime}</Text>
       </div>
     </div>
   </div>
