--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -3,6 +3,7 @@ import octokit from '@/libs/octokit';
 import { Book, Eye, GitFork, Star } from 'lucide-astro';
 import Link from './ui/link.astro';
 import Separator from './ui/separator.astro';
+import Text from './ui/text.astro';
 
 type Props = { project: string };
 
@@ -12,27 +13,17 @@ const repo = await octokit.repos
 ---
 
 <div class="h-full rounded border">
-  <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1 text-xs">
-    <Book class="shrink-0 text-2" size={12} aria-hidden />
-    <span>{repo.name}</span>
+  <div class="bg-surface-2 flex items-center gap-2 rounded-t border-b px-2 py-1">
+    <Book class="text-foreground-2 size-3 shrink-0" aria-hidden /><Text>{repo.name}</Text>
   </div>
   <div class="flex flex-col gap-3 p-3 text-2">
-    <p class="text-xxs text-2">{repo.description}</p>
+    <Text as="p" class="text-foreground-2 text-sm">{repo.description}</Text>
     <Separator />
-    <div class="flex items-center justify-between gap-2 text-xxs">
+    <div class="flex items-center justify-between gap-2 text-sm">
       <div class="flex items-center gap-3">
-        <div class="flex items-center gap-1">
-          <Star class="shrink-0" size={14} aria-hidden />
-          {repo.stargazers_count}
-        </div>
-        <div class="flex items-center gap-1">
-          <GitFork class="shrink-0" size={14} aria-hidden />
-          {repo.forks_count}
-        </div>
-        <div class="flex items-center gap-1">
-          <Eye class="shrink-0" size={14} aria-hidden />
-          {repo.watchers_count}
-        </div>
+        <div class="flex items-center gap-1"><Star class="size-3 shrink-0" />{repo.stargazers_count}</div>
+        <div class="flex items-center gap-1"><GitFork class="size-3 shrink-0" />{repo.forks_count}</div>
+        <div class="flex items-center gap-1"><Eye class="size-3 shrink-0" />{repo.watchers_count}</div>
       </div>
       <div class="flex gap-4">
         <Link href={repo.html_url}>Github</Link>
