--- a/src/components/ui/navigation-menu/components/dropdown-links.astro
+++ b/src/components/ui/navigation-menu/components/dropdown-links.astro
@@ -11,7 +11,7 @@ const { class: className, ...props } = Astro.props;
   {...props}
   :id="$id('navigation-menu-dropdown')"
   class={twMerge(
-    'bg-surface-1 absolute right-0 top-full z-50 mt-1 hidden min-w-[10rem] rounded border',
+    'bg-1 absolute right-0 top-full z-50 mt-1 hidden min-w-[10rem] rounded border',
     'before:absolute before:-top-2 before:h-2 before:w-full before:content-[""]',
     'group-focus-within:block group-hover:block',
     'animate-in motion-safe:fade-in-0 motion-safe:zoom-in-90',
