--- a/src/components/ui/text.astro
+++ b/src/components/ui/text.astro
@@ -8,10 +8,10 @@ const variants = tv({
   variants: {
     Tag: {
       p: 'max-w-prose',
-      h1: 'text-xxl font-medium',
-      h2: 'text-xl font-medium',
+      h1: 'text-4xl font-medium',
+      h2: 'text-2xl font-medium',
       h3: 'text-lg font-medium',
-      h4: 'text-md font-medium',
+      h4: 'text-base font-medium',
     },
   },
 });
