--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -36,23 +36,21 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
   og={`open-graph/src/content/posts/${post.slug}.png`}
 >
   <div class="mt-fluid-5 mx-auto max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
-    <article data-pagefind-body class="mx-auto max-w-prose">
-      <div class="flex flex-col gap-3" data-pagefind-meta={`slug:${post.slug}`}>
-        <h1 class="text-lg font-bold uppercase tracking-widest">{post.data.title}</h1>
-        <div class="text-xxs text-2 flex flex-wrap items-center gap-4">
-          <div class="bg-2 flex items-center gap-2 rounded border px-2">
+    <article class="mx-auto max-w-prose">
+      <div class="flex flex-col gap-3">
+        <h1 class="font-bold uppercase tracking-widest text-lg">{post.data.title}</h1>
+        <div class="text-xxs flex flex-wrap items-center gap-4 text-2">
+          <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Calendar class="shrink-0" size={14} aria-hidden />
-            <time data-pagefind-meta="published" datetime={post.data.published.iso}>
-              {post.data.published.pretty}
-            </time>
+            <time datetime={post.data.published.iso}>{post.data.published.pretty} </time>
           </div>
-          <div class="bg-2 flex items-center gap-2 rounded border px-2">
+          <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Clock4 class="shrink-0" size={14} aria-hidden />
-            <span data-pagefind-meta="readingTime">{extras.readingTime}</span>
+            <span>{extras.readingTime}</span>
           </div>
           <div
             x-data={`{ views: $fetch("/blog/api", ${JSON.stringify({ method: 'PUT', body: { slug: post.slug } })})}`}
-            class="bg-2 flex items-center gap-2 rounded border px-2 tracking-wider"
+            class="flex items-center gap-2 rounded border bg-2 px-2 tracking-wider"
           >
             <Eye class="shrink-0" size={14} aria-hidden />
             <span x-text="(await views)?.toString().padStart(6, '0')">000000</span>
@@ -60,9 +58,9 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
         </div>
       </div>
       <Separator class="mb-4 mt-6 xl:mb-10" />
-      <div data-pagefind-ignore class="block xl:hidden">
+      <div class="block xl:hidden">
         <details>
-          <summary class="text-xs tracking-wider">TABLE OF CONTENTS</summary>
+          <summary class="tracking-wider text-xs">TABLE OF CONTENTS</summary>
           <!-- prettier-ignore -->
           <ol class="flex pt-2 flex-col gap-1 text-xs text-2">
             <li><Link href="#introduction">Introduction</Link></li>
@@ -71,12 +69,12 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
         </details>
         <Separator class="mb-10 mt-4" />
       </div>
-      <div data-content class="flex flex-col gap-8 text-xs !leading-relaxed">
+      <div data-content class="flex flex-col gap-8 !leading-relaxed text-xs">
         <Content components={{ a: Link, h2: PostSubheader, figure: PostCode }} />
         {post.data.repo && <PostGithub repo={post.data.repo} />}
       </div>
       <Separator class="mb-16 mt-10" />
-      <div data-pagefind-ignore class="flex flex-col gap-4">
+      <div class="flex flex-col gap-4">
         <h3 class="font-bold tracking-widest">MORE POSTS</h3>
         <div class="grid gap-x-10 gap-y-6 md:grid-cols-2">
           <PostCard post={prev} />
@@ -85,12 +83,9 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
       </div>
     </article>
     <h2 id="introduction" class="sr-only"></h2>
-    <ul class="hidden">
-      {post.data.topics.map((topic) => <ul data-pagefind-filter="tag">{topic}</ul>)}
-    </ul>
     <aside class="sticky top-10 hidden h-max rounded border xl:block">
       <div class="flex flex-col gap-4 border-b p-4">
-        <h2 class="text-xs tracking-wider">TABLE OF CONTENTS</h2>
+        <h2 class="tracking-wider text-xs">TABLE OF CONTENTS</h2>
         <!-- prettier-ignore -->
         <ol class="flex flex-col gap-1 text-xxs text-2">
           <li><Link href="#introduction">Introduction</Link></li>
@@ -103,7 +98,7 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
         </div>
         <div class="text-xxs">
           <p class="font-bold tracking-wider">CHRISTIAN PENROD</p>
-          <p class="text-2 mb-2">Front-End Web Developer</p>
+          <p class="mb-2 text-2">Front-End Web Developer</p>
           <!-- prettier-ignore -->
           <ul class="flex text-2 [&_[data-external-icon]]:hidden [&_a]:!pr-2 [&_svg]:!w-3">
             <li><Link href={import.meta.env.GITHUB}><Github size={12} aria-label="Github" /></Link></li>
@@ -120,26 +115,26 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
 
 <style is:global lang="sass">
   [data-content] a
-    @apply text-foreground-1
+    @apply text-1
 
   [data-content] p
-    @apply text-foreground-2
+    @apply text-2
 
   [data-content] blockquote
-    @apply rounded border bg-surface-2 italic pr-4 pl-6 py-2 relative
+    @apply rounded border bg-2 italic pr-4 pl-6 py-2 relative
   [data-content] blockquote::before
-    @apply bg-surface-3 content-[""] rounded-l absolute w-3 border-r inset-y-0 left-0
+    @apply bg-3 content-[""] rounded-l absolute w-3 border-r inset-y-0 left-0
 
   [data-content] ol
     @apply list-decimal list-inside
 
   [data-content] code:not([data-language])
-    @apply text-foreground-1 font-sans text-xs border rounded px-1.5 py-0.5
+    @apply text-1 font-sans text-xs border rounded px-1.5 py-0.5
 
   [data-content] details
-    @apply bg-surface-2 rounded border [&:not(:last-of-type)]:mb-3 px-4 py-1 text-sm
+    @apply bg-2 rounded border [&:not(:last-of-type)]:mb-3 px-4 py-1 text-sm
   [data-content] details[open]
     @apply [&_summary]:mb-4 pb-4
   [data-content] summary
-    @apply cursor-pointer select-none hover:text-emphasis motion-safe:transition-colors
+    @apply cursor-pointer select-none hover:text-brand motion-safe:transition-colors
 </style>
