--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const posts = (await getCollection('posts'))
     <div>
       <Text as="h1" class="leading-none">CHRISTIAN PENROD</Text>
       <Text as="h2" class="text-2">Front-End Web Developer</Text>
-      <Text as="p" class="text-2 mb-10 mt-4">
+      <Text as="p" class="mb-10 mt-4 text-2">
         Working on the web since 2018. I enjoy developing efficient web experiences through code and design. I'm equally
         driven to sharing knowledge with others.
       </Text>
