--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -43,7 +43,9 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
               <Search slot="prefix" aria-hidden class="size-3.5" />
               <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
             </Textfield>
-            <fieldset class="flex flex-wrap gap-2">{topics.map((value) => <Chip {value} />)}</fieldset>
+            <fieldset class="flex flex-wrap gap-2">
+              {topics.map((value) => <Chip name="topics" x-on:click="submit" {value} />)}
+            </fieldset>
           </form>
           <PostResults />
         </div>
