--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -3,6 +3,7 @@ import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock4 } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
+import Date from './ui/date.astro';
 import Separator from './ui/separator.astro';
 import Text from './ui/text.astro';
 
@@ -23,14 +24,14 @@ const { remarkPluginFrontmatter } = await post.render();
   <div class="h-14 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
     <Image src={post.data.cover} alt="Post Cover" loading="eager" class="rounded-t" />
   </div>
-  <div class="bg-1 z-20 flex flex-1 flex-col gap-2 border-t p-4">
-    <Text class="group-hover:text-brand font-medium motion-safe:transition-colors">{post.data.title}</Text>
-    <Text as="p" class="text-2 flex-1 text-xs">{post.data.description}</Text>
+  <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
+    <Text class="font-medium group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
+    <Text as="p" class="flex-1 text-2 text-xs">{post.data.description}</Text>
     <Separator class="my-1.5" />
-    <div class="text-2 flex justify-between gap-4 text-xs">
+    <div class="flex justify-between gap-4 text-2 text-xs">
       <div class="flex items-center gap-2">
         <Calendar class="shrink-0" size={14} aria-hidden />
-        <time datetime={post.data.published.iso}>{post.data.published.pretty}</time>
+        <Date value={post.data.published} />
       </div>
       <div class="flex items-center gap-2">
         <Clock4 class="shrink-0" size={14} aria-hidden />
