--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -25,7 +25,7 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en" class="bg-2 text-1 ml-[calc(100vw-100%)] antialiased sm:p-4">
+<html lang="en" class="ml-[calc(100vw-100%)] bg-2 text-1 antialiased sm:p-4">
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
@@ -50,9 +50,9 @@ const {
     <link href={new URL(Astro.url.pathname, Astro.site)} rel="canonical" />
     <ViewTransitions />
   </head>
-  <body class="bg-1 mx-auto flex min-h-[calc(100dvh-2rem)] max-w-screen-xl flex-col sm:rounded sm:border">
-    <header class="bg-1 sticky top-1 flex h-12 w-full items-center rounded-t border-b px-4 text-xs">
-      <Link href="/" aria-label="Home" class={buttonVariants({ size: 'icon', class: 'mr-auto' })} />
+  <body class="mx-auto flex min-h-[calc(100dvh-2rem)] max-w-screen-xl flex-col bg-1 sm:rounded sm:border">
+    <header class="sticky top-1 flex h-12 w-full items-center rounded-t border-b bg-1 px-4 text-xs">
+      <Link href="/" aria-label="Home" class={buttonVariants({ color: 'ghost', size: 'icon', class: 'mr-auto' })} />
       <NavigationMenu.Root>
         <NavigationMenu.Link href="/blog">Blog</NavigationMenu.Link>
         <NavigationMenu.Dropdown>
@@ -65,14 +65,14 @@ const {
         </NavigationMenu.Dropdown>
       </NavigationMenu.Root>
       <ThemeSwitch strategy="button">
-        <Button size="icon" aria-label="Toggle theme">
+        <Button color="ghost" size="icon" aria-label="Toggle theme">
           <MoonStar class="hidden animate-in motion-safe:fade-in-0 motion-safe:zoom-in-50 dark:block" />
           <Sun class="animate-in motion-safe:fade-in-0 motion-safe:zoom-in-50 dark:hidden" />
         </Button>
       </ThemeSwitch>
     </header>
     <main {...props} class={twMerge('flex-1 px-6 py-10 sm:px-8 sm:py-14', className)}><slot /></main>
-    <footer class="text-2 flex items-center justify-between gap-3 rounded-b border-t px-6 py-4 text-xs">
+    <footer class="flex items-center justify-between gap-3 rounded-b border-t px-6 py-4 text-2 text-xs">
       <Text as="p">©{new Date().getFullYear()} Christian Penrod - All Rights Reserved</Text>
       <NavigationMenu.Root>
         <NavigationMenu.Link href="/">Home</NavigationMenu.Link>
