--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -37,7 +37,11 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
           </div>
         </div>
         <div x-data="partial('/blog/results')" class="flex flex-col gap-6">
-          <form method="post" class="flex flex-col gap-4 rounded border p-4 text-xs" @submit.prevent="submit">
+          <form
+            method="post"
+            class="flex flex-col gap-4 rounded border p-4 text-xs"
+            @submit.prevent="!loading && submission.get('query')?.trim() !== $el.query.value?.trim() && submit()"
+          >
             <Textfield name="query" placeholder="Search Posts" aria-label="Search Posts">
               <Search slot="prefix" aria-hidden class="size-3.5" />
               <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
